# Music-player-indev

./: CB.sh  CMakeLists.txt  DEPLOYMENT_GUIDE.md  DIAGNOSE_SKIP_AT_SAME_POINT.md  DOMAIN_SETUP.md  FIXED_CHUNK_BUG.md  FIXED_ISSUES.md  FIX_SONG_JUMPING.md  NEXT_STEPS.md  QUICK_DEPLOY.md  README.md  STREAMING_OPTIMIZATION.md  check_audio_files.sh  check_files_v2.sh  cmake_log.txt  conan_log.txt  conanfile.txt  config.json  debug_skip.sh  deploy.sh  deploy_systemd.sh  index.html  setup.sh  vcpkg-init.cmd
src/: main.cpp
